--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,10 @@
 ++++++++++++++++++++++++++++++++++++++++++++
++ product-service-3.0.2
+++++++++++++++++++++++++++++++++++++++++++++
++Changes
+1. Solved product search problems
+2. Version updated
+++++++++++++++++++++++++++++++++++++++++++++
 + product-service-1.0.4
 ++++++++++++++++++++++++++++++++++++++++++++
 +Changes
