--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,17 @@
 ++++++++++++++++++++++++++++++++++++++++++++
++ product-service-3.1.3 and 4
+++++++++++++++++++++++++++++++++++++++++++++
++Changes
+1. Added properties
+2. Added update endpoint in StoreRegionCountrySDeliveryServiceProviderController
+
+++++++++++++++++++++++++++++++++++++++++++++
++ product-service-3.1.2
+++++++++++++++++++++++++++++++++++++++++++++
++Changes
+1. Added logging in storelivechat service
+
+++++++++++++++++++++++++++++++++++++++++++++
 + product-service-3.1.1
 ++++++++++++++++++++++++++++++++++++++++++++
 +Changes
