--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,9 @@
 ++++++++++++++++++++++++++++++++++++++++++++
++ product-service-3.1.5
+++++++++++++++++++++++++++++++++++++++++++++
++Changes
+1.Default store commission will be added on store creation
+++++++++++++++++++++++++++++++++++++++++++++
 + product-service-3.1.3 and 4
 ++++++++++++++++++++++++++++++++++++++++++++
 +Changes
