added delete endpoint

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,10 @@
 ++++++++++++++++++++++++++++++++++++++++++++
++ product-service-3.1.6
+++++++++++++++++++++++++++++++++++++++++++++
++Changes
+1.Added delete endpoint for deleting all delivery providers related to store
+++++++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++
 + product-service-3.1.5
 ++++++++++++++++++++++++++++++++++++++++++++
 +Changes
