--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,9 @@
 ++++++++++++++++++++++++++++++++++++++++++++
++ product-service-3.1.7
+++++++++++++++++++++++++++++++++++++++++++++
++Changes
+1.Sort product now working
+++++++++++++++++++++++++++++++++++++++++++++
 + product-service-3.1.6
 ++++++++++++++++++++++++++++++++++++++++++++
 +Changes
