bug removed in select 1.0

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -2,6 +2,12 @@
 + product-service-3.1.7
 ++++++++++++++++++++++++++++++++++++++++++++
 +Changes
+1.Tried to solve sort product
+++++++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++
++ product-service-3.1.7
+++++++++++++++++++++++++++++++++++++++++++++
++Changes
 1.Sort product now working
 ++++++++++++++++++++++++++++++++++++++++++++
 + product-service-3.1.6
