--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,10 @@
 ++++++++++++++++++++++++++++++++++++++++++++
++ product-service-3.2.0
+++++++++++++++++++++++++++++++++++++++++++++
++Changes
+1.Sorting bug resolved by using group by
+++++++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++
 + product-service-3.1.7
 ++++++++++++++++++++++++++++++++++++++++++++
 +Changes
