--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,9 @@
 ++++++++++++++++++++++++++++++++++++++++++++
++ product-service-3.2.1
+++++++++++++++++++++++++++++++++++++++++++++
++Changes
+1.sort by created working now
+++++++++++++++++++++++++++++++++++++++++++++
 + product-service-3.2.0
 ++++++++++++++++++++++++++++++++++++++++++++
 +Changes
